# rag-brain

./: .gitignore  Makefile  README.md  Scratchpad.ipynb  main.py  pyproject.toml  run-db.sh  text.md
chunking/: chunking.py
server/: server.py
