[project]
name = "process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "click>=8.2.1",
    "langchain>=0.3.27",
    "pandas>=2.3.2",
    "pip>=25.2",
    "ruff>=0.13.0",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
]
