[project]
name = "process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "mcp[cli]>=1.14.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pathspec>=0.12.1",
    "pip>=25.2",
    "pypdf2>=3.0.1",
    "ruff>=0.13.0",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "tqdm>=4.67.1",
]

[project.scripts]
rag-brain = "process.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
